Feat: implement Vocab Quiz History and AI Explanation